--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h1>
             RATE PEA
         </h1>
+        <h3>
+            Search Course:
+        </h3>
+        <form>
+            <input type="text" id="coursesearch" name="coursesearch" placeholder="Search here.."><br>
+        </form>
     </body>
 </html>
-
