--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li> <a href = "#Computer Science"> Computer Science</a></li>
         </ul>
         <h1>
-            RATE PEA
+            RatePEA
         </h1>
         <h3>
             Search Course:
