--- a/newpost.html
+++ b/newpost.html
@@ -9,11 +9,13 @@
     <body>
          <ul>
             <li><a class="active" href="#home">Home</a></li>
-            <li> <a href = "#Science"> Science</a> </li>
-            <li> <a href = "#Math"> Math</a> </li>                
-            <li> <a href = "#Language"> Language</a> </li>
+            <li> <a href = "#Math"> Math</a> </li>    
             <li> <a href = "#English"> English</a> </li>
-            <li> <a href = "#Computer Science"> Computer Science</a></li>
+            <li> <a href = "#Science"> Science</a> </li>         
+            <li> <a href = "#History"> History</a></li>
+            <li> <a href = "#Language"> Language</a> </li>
+            <li> <a href = "#Relgion"> Relgion</a></li>
+            <li> <a href = "#Art"> Art</a></li>
         </ul>
         <h1>
             New Post
