--- a/index.html
+++ b/index.html
@@ -5,20 +5,86 @@
         <title>
             Rate PEA 
         </title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <div class="subnav">
+          <button class="subnavbtn">Science</button>
+          <div class="subnav-content">
+            <a href="#">Biology</a>
+            <a href="#">Chemestry</a>
+            <a href="#">Physics</a>
+            <a href="#">CompSci</a>
+          </div>
+        </div>
+        <div class="subnav">
+          <button class="subnavbtn">Langauge</i></button>
+          <div class="subnav-content">
+            <a href="#">Spanish</a>
+            <a href="#">French</a>
+            <a href="#">Mandarin</a>
+            <a href="#">German</a>
+            <a href="#">Japanese</a>
+            <a href="#">Russian</a>
+            <a href="#">Italian</a>
+            <a href="#">Arabic</a>
+            <a href="#">Latin</a>
+            <a href="#">Classical Greek</a>
+          </div>
+        </div>
+        <div class="subnav">
+          <button class="subnavbtn">Math</button>
+          <div class="subnav-content">
+            <a href="#">100s</a>
+            <a href="#">200s</a>
+            <a href="#">300s</a>
+            <a href="#">400s</a>
+            <a href="#">500s</a>
+            <a href="#">Electives</a>
+          </div>
+        </div>
+        <div class="subnav">
+          <button class="subnavbtn">English</button>
+          <div class="subnav-content">
+            <a href="#">General</a>
+            <a href="#">Electives</a>
+          </div>
+        </div>
+        <div class="subnav">
+            <button class="subnavbtn">History</button>
+            <div class="subnav-content">
+                <a href="#">200s</a>
+                <a href="#">300s</a>
+                <a href="#">US History</a>
+                <a href="#">500s</a>
+                <a href="#">Others</a>
+            </div>
+          </div>
+          <div class="subnav">
+          <button class="subnavbtn">Religion</button>
+          <div class="subnav-content">
+            <a href="#">200s</a>
+            <a href="#">300s</a>
+            <a href="#">400s</a>
+            <a href="#">500s</a>
+            <a href="#">Others</a>
+          </div>
+        </div>
+        <div class="subnav">
+            <button class="subnavbtn">Art</button>
+            <div class="subnav-content">
+                <a href="#">200s</a>
+                <a href="#">300s</a>
+                <a href="#">400s</a>
+                <a href="#">500s</a>
+                <a href="#">Others</a>
+            </div>
+          </div>
+      </div>
     <body>
-         <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li> <a href = "#Math"> Math</a> </li>    
-            <li> <a href = "#English"> English</a> </li>
-            <li> <a href = "#Science"> Science</a> </li>         
-            <li> <a href = "#History"> History</a></li>
-            <li> <a href = "#Language"> Language</a> </li>
-            <li> <a href = "#Relgion"> Relgion</a></li>
-            <li> <a href = "#Art"> Art</a></li>
-        </ul>
         <h1>
-            RatePEA
+            RatePEA <!--somehow make 23 smaller at the end -->
         </h1>
         <h3>
             Search Course:
