--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
     <div class="navbar">
-        <a href="#home">Home</a>
+        <div class="RatePEA">
+        <a href="#RatePEA">RatePEA</a>
+        </div>
         <div class="subnav">
           <button class="subnavbtn">Science</button>
           <div class="subnav-content">
@@ -92,5 +94,8 @@
         <form>
             <input type="text" id="coursesearch" name="coursesearch" placeholder="Search here.."><br>
         </form>
+        <a href="#" class="button">NewPOST</a>
     </body>
 </html>
+
+<!--ask ariana to do logo design - maybe clocktower to put digital sketch on main screen -->
