--- a/index.html
+++ b/index.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html>    
     <head>
         <link rel="stylesheet" href="style.css" >
-        <title>
-            Rate PEA 
-        </title>
+            <title>
+                Rate PEA 
+            </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
-    <div class="navbar">
+
+    <div class="navbar">      
         <div class="RatePEA">
-        <a href="#RatePEA">RatePEA</a>
+            <a href="#RatePEA">RatePEA</a>
         </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">Math</button>
+            <div class="subnav-content">
+              <a href="#">100s</a>
+              <a href="#">200s</a>
+              <a href="#">300s</a>
+              <a href="#">400s</a>
+              <a href="#">500s</a>
+              <a href="#">Electives</a>
+            </div>
+        </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">English</button>
+            <div class="subnav-content">
+              <a href="#">General</a>
+              <a href="#">Electives</a>
+            </div>
+        </div>
+
         <div class="subnav">
           <button class="subnavbtn">Science</button>
           <div class="subnav-content">
             <a href="#">Biology</a>
-            <a href="#">Chemestry</a>
+            <a href="#">Chemistry</a>
             <a href="#">Physics</a>
-            <a href="#">CompSci</a>
+            <a href="#">Computer Science</a>
           </div>
         </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">History</button>
+            <div class="subnav-content">
+                <a href="#">200s</a>
+                <a href="#">300s</a>
+                <a href="#">US History</a>
+                <a href="#">500s</a>
+                <a href="#">Others</a>
+            </div>
+        </div>
+
         <div class="subnav">
           <button class="subnavbtn">Langauge</i></button>
           <div class="subnav-content">
@@ -35,35 +69,8 @@
             <a href="#">Classical Greek</a>
           </div>
         </div>
+
         <div class="subnav">
-          <button class="subnavbtn">Math</button>
-          <div class="subnav-content">
-            <a href="#">100s</a>
-            <a href="#">200s</a>
-            <a href="#">300s</a>
-            <a href="#">400s</a>
-            <a href="#">500s</a>
-            <a href="#">Electives</a>
-          </div>
-        </div>
-        <div class="subnav">
-          <button class="subnavbtn">English</button>
-          <div class="subnav-content">
-            <a href="#">General</a>
-            <a href="#">Electives</a>
-          </div>
-        </div>
-        <div class="subnav">
-            <button class="subnavbtn">History</button>
-            <div class="subnav-content">
-                <a href="#">200s</a>
-                <a href="#">300s</a>
-                <a href="#">US History</a>
-                <a href="#">500s</a>
-                <a href="#">Others</a>
-            </div>
-          </div>
-          <div class="subnav">
           <button class="subnavbtn">Religion</button>
           <div class="subnav-content">
             <a href="#">200s</a>
@@ -73,6 +80,7 @@
             <a href="#">Others</a>
           </div>
         </div>
+
         <div class="subnav">
             <button class="subnavbtn">Art</button>
             <div class="subnav-content">
@@ -82,8 +90,9 @@
                 <a href="#">500s</a>
                 <a href="#">Others</a>
             </div>
-          </div>
-      </div>
+        </div>
+    </div>
+
     <body>
         <h1>
             RatePEA <!--somehow make 23 smaller at the end -->
