--- a/newpost.html
+++ b/newpost.html
@@ -2,88 +2,97 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css" >
-        <title>
-            New Post
-        </title>
+            <title>
+                New Post
+            </title>
     </head> 
-    <body>
-        <div class="navbar">
-            <div class="RatePEA">
+
+    <div class="navbar">
+        <div class="RatePEA">
             <a href="#RatePEA">RatePEA</a>
+        </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">Math</button>
+            <div class="subnav-content">
+              <a href="#">100s</a>
+              <a href="#">200s</a>
+              <a href="#">300s</a>
+              <a href="#">400s</a>
+              <a href="#">500s</a>
+              <a href="#">Electives</a>
             </div>
-            <div class="subnav">
-              <button class="subnavbtn">Science</button>
-              <div class="subnav-content">
-                <a href="#">Biology</a>
-                <a href="#">Chemestry</a>
-                <a href="#">Physics</a>
-                <a href="#">CompSci</a>
-              </div>
+        </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">English</button>
+            <div class="subnav-content">
+              <a href="#">General</a>
+              <a href="#">Electives</a>
             </div>
-            <div class="subnav">
-              <button class="subnavbtn">Langauge</i></button>
-              <div class="subnav-content">
-                <a href="#">Spanish</a>
-                <a href="#">French</a>
-                <a href="#">Mandarin</a>
-                <a href="#">German</a>
-                <a href="#">Japanese</a>
-                <a href="#">Russian</a>
-                <a href="#">Italian</a>
-                <a href="#">Arabic</a>
-                <a href="#">Latin</a>
-                <a href="#">Classical Greek</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Math</button>
-              <div class="subnav-content">
-                <a href="#">100s</a>
+        </div>
+
+        <div class="subnav">
+          <button class="subnavbtn">Science</button>
+          <div class="subnav-content">
+            <a href="#">Biology</a>
+            <a href="#">Chemistry</a>
+            <a href="#">Physics</a>
+            <a href="#">Computer Science</a>
+          </div>
+        </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">History</button>
+            <div class="subnav-content">
                 <a href="#">200s</a>
                 <a href="#">300s</a>
-                <a href="#">400s</a>
+                <a href="#">US History</a>
                 <a href="#">500s</a>
-                <a href="#">Electives</a>
-              </div>
+                <a href="#">Others</a>
             </div>
-            <div class="subnav">
-              <button class="subnavbtn">English</button>
-              <div class="subnav-content">
-                <a href="#">General</a>
-                <a href="#">Electives</a>
-              </div>
-            </div>
-            <div class="subnav">
-                <button class="subnavbtn">History</button>
-                <div class="subnav-content">
-                    <a href="#">200s</a>
-                    <a href="#">300s</a>
-                    <a href="#">US History</a>
-                    <a href="#">500s</a>
-                    <a href="#">Others</a>
-                </div>
-              </div>
-              <div class="subnav">
-              <button class="subnavbtn">Religion</button>
-              <div class="subnav-content">
+        </div>
+
+        <div class="subnav">
+          <button class="subnavbtn">Langauge</i></button>
+          <div class="subnav-content">
+            <a href="#">Spanish</a>
+            <a href="#">French</a>
+            <a href="#">Mandarin</a>
+            <a href="#">German</a>
+            <a href="#">Japanese</a>
+            <a href="#">Russian</a>
+            <a href="#">Italian</a>
+            <a href="#">Arabic</a>
+            <a href="#">Latin</a>
+            <a href="#">Classical Greek</a>
+          </div>
+        </div>
+
+        <div class="subnav">
+          <button class="subnavbtn">Religion</button>
+          <div class="subnav-content">
+            <a href="#">200s</a>
+            <a href="#">300s</a>
+            <a href="#">400s</a>
+            <a href="#">500s</a>
+            <a href="#">Others</a>
+          </div>
+        </div>
+
+        <div class="subnav">
+            <button class="subnavbtn">Art</button>
+            <div class="subnav-content">
                 <a href="#">200s</a>
                 <a href="#">300s</a>
                 <a href="#">400s</a>
                 <a href="#">500s</a>
                 <a href="#">Others</a>
-              </div>
             </div>
-            <div class="subnav">
-                <button class="subnavbtn">Art</button>
-                <div class="subnav-content">
-                    <a href="#">200s</a>
-                    <a href="#">300s</a>
-                    <a href="#">400s</a>
-                    <a href="#">500s</a>
-                    <a href="#">Others</a>
-                </div>
-              </div>
-          </div>
+        </div>
+    </div>
+
+    <body>
         <h1>
             New Post
         </h1>
