--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="navbar">      
         <div class="RatePEA">
-            <a href="#RatePEA">RatePEA</a>
+            <a class = "active" href="#RatePEA">RatePEA</a>
         </div>
 
         <div class="subnav">
