--- a/index.html
+++ b/index.html
@@ -1,98 +1,89 @@
 <!DOCTYPE html>
-<html>    
+<html>
     <head>
         <link rel="stylesheet" href="style.css" >
-            <title>
-                Rate PEA 
-            </title>
+        <title>
+            Rate PEA 
+        </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
-
-    <div class="navbar">      
+    <div class="navbar">
         <div class="RatePEA">
-            <a class = "active" href="#RatePEA">RatePEA</a>
+        <a href="#RatePEA">RatePEA</a>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">Math</button>
-            <div class="subnav-content">
-              <a href="#">100s</a>
-              <a href="#">200s</a>
-              <a href="#">300s</a>
-              <a href="#">400s</a>
-              <a href="#">500s</a>
-              <a href="#">Electives</a>
-            </div>
-        </div>
-
-        <div class="subnav">
-            <button class="subnavbtn">English</button>
-            <div class="subnav-content">
-              <a href="#">General</a>
-              <a href="#">Electives</a>
-            </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Science</button>
+          <button class="subnavbtn">Art</button>
           <div class="subnav-content">
-            <a href="#">Biology</a>
-            <a href="#">Chemistry</a>
-            <a href="#">Physics</a>
-            <a href="#">Computer Science</a>
+              <a href="#a2">200s</a>
+              <a href="#a3">300s</a>
+              <a href="#a4">400s</a>
+              <a href="#a5">500s</a>
+              <a href="#ao">Others</a>
           </div>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">History</button>
-            <div class="subnav-content">
-                <a href="#">200s</a>
-                <a href="#">300s</a>
-                <a href="#">US History</a>
-                <a href="#">500s</a>
-                <a href="#">Others</a>
-            </div>
+          <button class="subnavbtn">English</button>
+          <div class="subnav-content">
+            <a href="#eg">General</a>
+            <a href="#ee">Electives</a>
+          </div>
         </div>
-
+        <div class="subnav">
+          <button class="subnavbtn">History</button>
+          <div class="subnav-content">
+              <a href="#h2">200s</a>
+              <a href="#h3">300s</a>
+              <a href="#hus">US History</a>
+              <a href="#h5">500s</a>
+              <a href="#ho">Others</a>
+          </div>
+        </div>
         <div class="subnav">
           <button class="subnavbtn">Langauge</i></button>
           <div class="subnav-content">
-            <a href="#">Spanish</a>
-            <a href="#">French</a>
-            <a href="#">Mandarin</a>
-            <a href="#">German</a>
-            <a href="#">Japanese</a>
-            <a href="#">Russian</a>
-            <a href="#">Italian</a>
-            <a href="#">Arabic</a>
-            <a href="#">Latin</a>
-            <a href="#">Classical Greek</a>
+            <a href="#lspa">Spanish</a>
+            <a href="#lfre">French</a>
+            <a href="#lman">Mandarin</a>
+            <a href="#lger">German</a>
+            <a href="#ljap">Japanese</a>
+            <a href="#lrus">Russian</a>
+            <a href="#lita">Italian</a>
+            <a href="#lara">Arabic</a>
+            <a href="#llat">Latin</a>
+            <a href="#lgre">Classical Greek</a>
           </div>
         </div>
-
+        <div class="subnav">
+          <button class="subnavbtn">Math</button>
+          <div class="subnav-content">
+            <a href="#m1">100s</a>
+            <a href="#m2">200s</a>
+            <a href="#m3">300s</a>
+            <a href="#m4">400s</a>
+            <a href="#m5">500s</a>
+            <a href="#me">Electives</a>
+          </div>
+        </div>
         <div class="subnav">
           <button class="subnavbtn">Religion</button>
           <div class="subnav-content">
-            <a href="#">200s</a>
-            <a href="#">300s</a>
-            <a href="#">400s</a>
-            <a href="#">500s</a>
-            <a href="#">Others</a>
+            <a href="#r2">200s</a>
+            <a href="#r3">300s</a>
+            <a href="#r4">400s</a>
+            <a href="#r5">500s</a>
+            <a href="#ro">Others</a>
           </div>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">Art</button>
-            <div class="subnav-content">
-                <a href="#">200s</a>
-                <a href="#">300s</a>
-                <a href="#">400s</a>
-                <a href="#">500s</a>
-                <a href="#">Others</a>
-            </div>
+          <button class="subnavbtn">Science</button>
+          <div class="subnav-content">
+            <a href="#sbio">Biology</a>
+            <a href="#schem">Chemestry</a>
+            <a href="#sphy">Physics</a>
+            <a href="#scs">CompSci</a>
+          </div>
         </div>
-    </div>
-
+      </div>
     <body>
         <h1>
             RatePEA <!--somehow make 23 smaller at the end -->
@@ -103,8 +94,6 @@
         <form>
             <input type="text" id="coursesearch" name="coursesearch" placeholder="Search here.."><br>
         </form>
-        <a href="#" class="button">NewPOST</a>
+        <a href="#newpostb" class="button">NewPOST</a>
     </body>
 </html>
-
-<!--ask ariana to do logo design - maybe clocktower to put digital sketch on main screen -->
