--- a/newpost.html
+++ b/newpost.html
@@ -2,97 +2,88 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css" >
-            <title>
-                New Post
-            </title>
+        <title>
+            New Post
+        </title>
     </head> 
-
-    <div class="navbar">
+    <body>
+      <div class="navbar">
         <div class="RatePEA">
-            <a href="#RatePEA">RatePEA</a>
+        <a href="#RatePEA">RatePEA</a>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">Math</button>
-            <div class="subnav-content">
-              <a href="#">100s</a>
-              <a href="#">200s</a>
-              <a href="#">300s</a>
-              <a href="#">400s</a>
-              <a href="#">500s</a>
-              <a href="#">Electives</a>
-            </div>
-        </div>
-
-        <div class="subnav">
-            <button class="subnavbtn">English</button>
-            <div class="subnav-content">
-              <a href="#">General</a>
-              <a href="#">Electives</a>
-            </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Science</button>
+          <button class="subnavbtn">Art</button>
           <div class="subnav-content">
-            <a href="#">Biology</a>
-            <a href="#">Chemistry</a>
-            <a href="#">Physics</a>
-            <a href="#">Computer Science</a>
+              <a href="#a2">200s</a>
+              <a href="#a3">300s</a>
+              <a href="#a4">400s</a>
+              <a href="#a5">500s</a>
+              <a href="#ao">Others</a>
           </div>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">History</button>
-            <div class="subnav-content">
-                <a href="#">200s</a>
-                <a href="#">300s</a>
-                <a href="#">US History</a>
-                <a href="#">500s</a>
-                <a href="#">Others</a>
-            </div>
+          <button class="subnavbtn">English</button>
+          <div class="subnav-content">
+            <a href="#eg">General</a>
+            <a href="#ee">Electives</a>
+          </div>
         </div>
-
+        <div class="subnav">
+          <button class="subnavbtn">History</button>
+          <div class="subnav-content">
+              <a href="#h2">200s</a>
+              <a href="#h3">300s</a>
+              <a href="#hus">US History</a>
+              <a href="#h5">500s</a>
+              <a href="#ho">Others</a>
+          </div>
+        </div>
         <div class="subnav">
           <button class="subnavbtn">Langauge</i></button>
           <div class="subnav-content">
-            <a href="#">Spanish</a>
-            <a href="#">French</a>
-            <a href="#">Mandarin</a>
-            <a href="#">German</a>
-            <a href="#">Japanese</a>
-            <a href="#">Russian</a>
-            <a href="#">Italian</a>
-            <a href="#">Arabic</a>
-            <a href="#">Latin</a>
-            <a href="#">Classical Greek</a>
+            <a href="#lspa">Spanish</a>
+            <a href="#lfre">French</a>
+            <a href="#lman">Mandarin</a>
+            <a href="#lger">German</a>
+            <a href="#ljap">Japanese</a>
+            <a href="#lrus">Russian</a>
+            <a href="#lita">Italian</a>
+            <a href="#lara">Arabic</a>
+            <a href="#llat">Latin</a>
+            <a href="#lgre">Classical Greek</a>
           </div>
         </div>
-
+        <div class="subnav">
+          <button class="subnavbtn">Math</button>
+          <div class="subnav-content">
+            <a href="#m1">100s</a>
+            <a href="#m2">200s</a>
+            <a href="#m3">300s</a>
+            <a href="#m4">400s</a>
+            <a href="#m5">500s</a>
+            <a href="#me">Electives</a>
+          </div>
+        </div>
         <div class="subnav">
           <button class="subnavbtn">Religion</button>
           <div class="subnav-content">
-            <a href="#">200s</a>
-            <a href="#">300s</a>
-            <a href="#">400s</a>
-            <a href="#">500s</a>
-            <a href="#">Others</a>
+            <a href="#r2">200s</a>
+            <a href="#r3">300s</a>
+            <a href="#r4">400s</a>
+            <a href="#r5">500s</a>
+            <a href="#ro">Others</a>
           </div>
         </div>
-
         <div class="subnav">
-            <button class="subnavbtn">Art</button>
-            <div class="subnav-content">
-                <a href="#">200s</a>
-                <a href="#">300s</a>
-                <a href="#">400s</a>
-                <a href="#">500s</a>
-                <a href="#">Others</a>
-            </div>
+          <button class="subnavbtn">Science</button>
+          <div class="subnav-content">
+            <a href="#sbio">Biology</a>
+            <a href="#schem">Chemestry</a>
+            <a href="#sphy">Physics</a>
+            <a href="#scs">CompSci</a>
+          </div>
         </div>
-    </div>
-
-    <body>
+      </div>
         <h1>
             New Post
         </h1>
