--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
+
     <div class="navbar">
         <div class="RatePEA">
-        <a href="#RatePEA">RatePEA</a>
+          <a class = "active" href="#RatePEA">RatePEA</a>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">Art</button>
           <div class="subnav-content">
@@ -21,6 +23,7 @@
               <a href="#ao">Others</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">English</button>
           <div class="subnav-content">
@@ -28,6 +31,7 @@
             <a href="#ee">Electives</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">History</button>
           <div class="subnav-content">
@@ -38,6 +42,7 @@
               <a href="#ho">Others</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">Langauge</i></button>
           <div class="subnav-content">
@@ -53,6 +58,7 @@
             <a href="#lgre">Classical Greek</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">Math</button>
           <div class="subnav-content">
@@ -64,6 +70,7 @@
             <a href="#me">Electives</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">Religion</button>
           <div class="subnav-content">
@@ -74,6 +81,7 @@
             <a href="#ro">Others</a>
           </div>
         </div>
+
         <div class="subnav">
           <button class="subnavbtn">Science</button>
           <div class="subnav-content">
@@ -84,7 +92,8 @@
           </div>
         </div>
       </div>
-    <body>
+    
+      <body>
         <h1>
             RatePEA <!--somehow make 23 smaller at the end -->
         </h1>
