--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
-
     <div class="navbar">
         <div class="RatePEA">
           <a class = "active" href="#RatePEA">RatePEA</a>
         </div>
-
+        
         <div class="subnav">
           <button class="subnavbtn">Art</button>
           <div class="subnav-content">
@@ -48,7 +47,7 @@
           <div class="subnav-content">
             <a href="#lspa">Spanish</a>
             <a href="#lfre">French</a>
-            <a href="#lman">Mandarin</a>
+            <a href="#lman">Chinese</a>
             <a href="#lger">German</a>
             <a href="#ljap">Japanese</a>
             <a href="#lrus">Russian</a>
@@ -106,3 +105,5 @@
         <a href="#newpostb" class="button">NewPOST</a>
     </body>
 </html>
+
+<!--ask ariana to do logo design - maybe clocktower to put digital sketch on main screen -->
