--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <!-- Setting CSS and Title -->
     <head>
         <link rel="stylesheet" href="style.css" >
         <title>
@@ -7,6 +8,8 @@
         </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
     </head> 
+
+    <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
         <div class="RatePEA">
           <a class = "active" href="#RatePEA">RatePEA</a>
@@ -92,6 +95,7 @@
         </div>
       </div>
     
+      <!-- Everything on the page -->
       <body>
         <h1>
             RatePEA <!--somehow make 23 smaller at the end -->
