--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             Search Course:
         </h3>
         <form>
+           <div class="index">
             <input type="text" id="coursesearch" name="coursesearch" placeholder="Search here.."><br>
+          </div>
         </form>
         <a href="#newpostb" class="button">NewPOST</a>
     </body>
