--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </div>
 
-        <b class = "active" href="newpost.html">New Post</b>
+        <a href="newpost.html">New Post </a>
 
       </div>
     
